fixed navbar spacing and color issue. nearly finished contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,58 +12,60 @@ body {
     margin: 0;
 }
 
-header {
-    background: #ffffff;
-    border: solid 1px #cccccc;
-    height: 75px;
-    width: 100%;
-    margin-bottom: 30px;
-    position: relative;
-    line-height: 75px;
-}
+/* Header CSS */
+    header {
+        background: #ffffff;
+        border: solid 1px #cccccc;
+        height: 75px;
+        width: 100%;
+        margin-bottom: 30px;
+        position: relative;
+        line-height: 75px;
+    }
 
-h1,
-h2 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
+    h1,
+    h2 {
+        font-family: 'Georgia', Times, Times New Roman, serif;
+    }
 
-h1 {
-    background: #4aaaa5;
-    text-align: center;
-    width: 225px;
-    height: 75px;
-    position: absolute;
-    left: 16.666666666667%;
-    margin: 0;
-}
+    h1 {
+        background: #4aaaa5;
+        text-align: center;
+        width: 225px;
+        height: 75px;
+        position: absolute;
+        left: 16.666666666667%;
+        margin: 0;
+    }
 
-h2 {
-    color: #4aaaa5;
-}
+    h2 {
+        color: #4aaaa5;
+    }
 
-.h-teal {
-    background: #4aaaa5;
-    color: #ffffff;
-}
+    .h-teal {
+        background: #4aaaa5;
+        color: #ffffff;
+    }
 
-nav {
-    position: absolute;
-    right: 16.666666666667%;
-}
+/* Navbar CSS */
+    nav {
+        position: absolute;
+        right: 16.666666666667%;
+    }
 
-nav a {
-    text-decoration: none;
-    color: #777777;
-}
+    nav a {
+        text-decoration: none;
+        color: #777777;
+    }
 
-nav a:hover {
-    color: #dddddd;
-}
+    nav a:hover {
+        color: #dddddd;
+    }
 
-nav span {
-    color: #dddddd;
-    margin: 2px; 
-}
+    nav span {
+        color: #dddddd;
+        margin: 2px; 
+    }
 
 .container {
     width: 66.666666666667%;
@@ -80,18 +82,38 @@ nav span {
     margin-top: 10px;
     margin-right: 20px;
 }
+/* Footer CSS */
+    footer {
+        background: #666666;
+        color: #ffffff;
+        margin-top: 50px;
+        font-size: 9px;
+        height: 55px;
+        text-align: center;
+        line-height: 55px;
+    }
 
-footer {
-    background: #666666;
-    color: #ffffff;
-    margin-top: 50px;
-    font-size: 9px;
-    height: 55px;
-    text-align: center;
-    line-height: 55px;
-}
+    .div-foot {
+        background: #4aaaa5;
+        height: 5px;
+    }
 
-.div-foot {
-    background: #4aaaa5;
-    height: 5px;
-}
+/* Contact Form CSS */
+    input,
+    #message {
+        width: 100%;
+    }
+
+    .submit-btn {
+        width: 90px;
+        padding: 10px;
+        background: #4aaaa5;
+        color: #ffffff;
+        font-size: 14px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+
+    .submit-btn:hover {
+        opacity: .8;
+    }
